--- a/styles/news.css
+++ b/styles/news.css
@@ -52,7 +52,7 @@ button:hover {
 }
 
 .wrapper {
-    width: 1900px;
+    width: 1920px;
     background: #FFFFFF;
 }
 
@@ -194,6 +194,7 @@ button:hover {
 
 .news_element .ref {
     font-size: 20px;
+    padding-top: 60px;
     text-align: right;
 }
 
