--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -52,7 +52,7 @@ button:hover {
 }
 
 .wrapper {
-    width: 1920px;
+    margin: 0 auto;
     background: #FFFFFF;
 }
 
@@ -209,7 +209,7 @@ h2 {
     margin-right: 580px;
 
     display: grid;
-    justify-items: stretch;
+    justify-items: center;
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 80px;
@@ -230,7 +230,7 @@ h2 {
     margin-right: 240px;
 
     display: grid;
-    justify-items: stretch;
+    justify-items: center;
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 40px;
