--- a/styles/news.css
+++ b/styles/news.css
@@ -52,7 +52,7 @@ button:hover {
 }
 
 .wrapper {
-    width: 1920px;
+    margin: 0 auto;
     background: #FFFFFF;
 }
 
@@ -163,7 +163,7 @@ button:hover {
     margin-right: 240px;
     
     display: grid;
-    justify-items: stretch;
+    justify-items: center;
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 40px;
